[gd_scene load_steps=64 format=3 uid="uid://ce72ie1ato1p0"]

[ext_resource type="Script" uid="uid://cv4s5v28krf2d" path="res://Scripts/player.gd" id="1_kpjcp"]
[ext_resource type="Texture2D" uid="uid://blxt428p3b5nf" path="res://Assets/sprites/Nightborne/NightBorne.png" id="2_kpjcp"]

[sub_resource type="AtlasTexture" id="AtlasTexture_kpjcp"]
atlas = ExtResource("2_kpjcp")
region = Rect2(0, 160, 80, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_itxgx"]
atlas = ExtResource("2_kpjcp")
region = Rect2(80, 160, 80, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_cgsek"]
atlas = ExtResource("2_kpjcp")
region = Rect2(160, 160, 80, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_0pi4m"]
atlas = ExtResource("2_kpjcp")
region = Rect2(240, 160, 80, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_sg6sq"]
atlas = ExtResource("2_kpjcp")
region = Rect2(320, 160, 80, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_h84ma"]
atlas = ExtResource("2_kpjcp")
region = Rect2(400, 160, 80, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_47wu6"]
atlas = ExtResource("2_kpjcp")
region = Rect2(480, 160, 80, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_2n1s8"]
atlas = ExtResource("2_kpjcp")
region = Rect2(560, 160, 80, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_3vjad"]
atlas = ExtResource("2_kpjcp")
region = Rect2(640, 160, 80, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_yt0h1"]
atlas = ExtResource("2_kpjcp")
region = Rect2(720, 160, 80, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_vd78s"]
atlas = ExtResource("2_kpjcp")
region = Rect2(800, 160, 80, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_ictha"]
atlas = ExtResource("2_kpjcp")
region = Rect2(880, 160, 80, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_1jgrc"]
atlas = ExtResource("2_kpjcp")
region = Rect2(0, 320, 80, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_7wy67"]
atlas = ExtResource("2_kpjcp")
region = Rect2(80, 320, 80, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_q26ax"]
atlas = ExtResource("2_kpjcp")
region = Rect2(160, 320, 80, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_p01ps"]
atlas = ExtResource("2_kpjcp")
region = Rect2(240, 320, 80, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_m7dl7"]
atlas = ExtResource("2_kpjcp")
region = Rect2(320, 320, 80, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_48og4"]
atlas = ExtResource("2_kpjcp")
region = Rect2(400, 320, 80, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_xmpta"]
atlas = ExtResource("2_kpjcp")
region = Rect2(480, 320, 80, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_mrbh7"]
atlas = ExtResource("2_kpjcp")
region = Rect2(560, 320, 80, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_lrhq4"]
atlas = ExtResource("2_kpjcp")
region = Rect2(640, 320, 80, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_ibubc"]
atlas = ExtResource("2_kpjcp")
region = Rect2(720, 320, 80, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_gueye"]
atlas = ExtResource("2_kpjcp")
region = Rect2(800, 320, 80, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_3tfrk"]
atlas = ExtResource("2_kpjcp")
region = Rect2(880, 320, 80, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_f7new"]
atlas = ExtResource("2_kpjcp")
region = Rect2(960, 320, 80, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_ravlb"]
atlas = ExtResource("2_kpjcp")
region = Rect2(1040, 320, 80, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_6efpq"]
atlas = ExtResource("2_kpjcp")
region = Rect2(1120, 320, 80, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_fhngp"]
atlas = ExtResource("2_kpjcp")
region = Rect2(1200, 320, 80, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_nd6qy"]
atlas = ExtResource("2_kpjcp")
region = Rect2(1280, 320, 80, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_23wgl"]
atlas = ExtResource("2_kpjcp")
region = Rect2(1360, 320, 80, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_u4q42"]
atlas = ExtResource("2_kpjcp")
region = Rect2(1440, 320, 80, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_ctcj5"]
atlas = ExtResource("2_kpjcp")
region = Rect2(1520, 320, 80, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_chpgb"]
atlas = ExtResource("2_kpjcp")
region = Rect2(1600, 320, 80, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_xjpfi"]
atlas = ExtResource("2_kpjcp")
region = Rect2(1680, 320, 80, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_po6o7"]
atlas = ExtResource("2_kpjcp")
region = Rect2(1760, 320, 80, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_b3xlj"]
atlas = ExtResource("2_kpjcp")
region = Rect2(1760, 240, 80, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_4cdfs"]
atlas = ExtResource("2_kpjcp")
region = Rect2(0, 240, 80, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_njqbf"]
atlas = ExtResource("2_kpjcp")
region = Rect2(80, 240, 80, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_ffn1m"]
atlas = ExtResource("2_kpjcp")
region = Rect2(160, 240, 80, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_mft6i"]
atlas = ExtResource("2_kpjcp")
region = Rect2(240, 240, 80, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_ctv73"]
atlas = ExtResource("2_kpjcp")
region = Rect2(320, 240, 80, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_kne1u"]
atlas = ExtResource("2_kpjcp")
region = Rect2(240, 80, 80, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_e80uo"]
atlas = ExtResource("2_kpjcp")
region = Rect2(0, 80, 80, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_cxr5p"]
atlas = ExtResource("2_kpjcp")
region = Rect2(80, 80, 80, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_tdg3f"]
atlas = ExtResource("2_kpjcp")
region = Rect2(160, 80, 80, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_dtqjt"]
atlas = ExtResource("2_kpjcp")
region = Rect2(240, 80, 80, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_5ncpa"]
atlas = ExtResource("2_kpjcp")
region = Rect2(320, 80, 80, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_wi0c6"]
atlas = ExtResource("2_kpjcp")
region = Rect2(400, 80, 80, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_hp6x6"]
atlas = ExtResource("2_kpjcp")
region = Rect2(0, 0, 80, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_3tkgg"]
atlas = ExtResource("2_kpjcp")
region = Rect2(80, 0, 80, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_l6ohk"]
atlas = ExtResource("2_kpjcp")
region = Rect2(160, 0, 80, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_oudfo"]
atlas = ExtResource("2_kpjcp")
region = Rect2(240, 0, 80, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_d6rpx"]
atlas = ExtResource("2_kpjcp")
region = Rect2(320, 0, 80, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_r3kul"]
atlas = ExtResource("2_kpjcp")
region = Rect2(400, 0, 80, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_jatw7"]
atlas = ExtResource("2_kpjcp")
region = Rect2(480, 0, 80, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_rv870"]
atlas = ExtResource("2_kpjcp")
region = Rect2(560, 0, 80, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_efikj"]
atlas = ExtResource("2_kpjcp")
region = Rect2(640, 0, 80, 80)

[sub_resource type="SpriteFrames" id="SpriteFrames_cxr5p"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_kpjcp")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_itxgx")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_cgsek")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_0pi4m")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_sg6sq")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_h84ma")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_47wu6")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_2n1s8")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_3vjad")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_yt0h1")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_vd78s")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ictha")
}],
"loop": false,
"name": &"Attack",
"speed": 11.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_1jgrc")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_7wy67")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_q26ax")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_p01ps")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_m7dl7")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_48og4")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_xmpta")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_mrbh7")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_lrhq4")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ibubc")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_gueye")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_3tfrk")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_f7new")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ravlb")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_6efpq")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_fhngp")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_nd6qy")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_23wgl")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_u4q42")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ctcj5")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_chpgb")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_xjpfi")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_po6o7")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_b3xlj")
}],
"loop": false,
"name": &"Death",
"speed": 12.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_4cdfs")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_njqbf")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ffn1m")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_mft6i")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ctv73")
}],
"loop": false,
"name": &"Hurt",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_kne1u")
}],
"loop": true,
"name": &"Jump",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_e80uo")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_cxr5p")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_tdg3f")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_dtqjt")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_5ncpa")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_wi0c6")
}],
"loop": true,
"name": &"Run",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_hp6x6")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_3tkgg")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_l6ohk")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_oudfo")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_d6rpx")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_r3kul")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_jatw7")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_rv870")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_efikj")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_kpjcp"]
height = 26.0

[sub_resource type="CircleShape2D" id="CircleShape2D_e80uo"]
radius = 16.0312

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_kne1u"]
radius = 13.0
height = 50.0

[node name="Player" type="CharacterBody2D"]
z_index = 5
collision_layer = 3
collision_mask = 3
script = ExtResource("1_kpjcp")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
position = Vector2(0, 1)
sprite_frames = SubResource("SpriteFrames_cxr5p")
animation = &"Hurt"
autoplay = "default"
frame = 4
frame_progress = 1.0

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(1, 12)
shape = SubResource("CapsuleShape2D_kpjcp")

[node name="PlayerHit" type="Area2D" parent="."]

[node name="CollisionShape2D2" type="CollisionShape2D" parent="PlayerHit"]
position = Vector2(1, 12)
shape = SubResource("CircleShape2D_e80uo")

[node name="AttackHit" type="Area2D" parent="."]

[node name="CollisionShape2D2" type="CollisionShape2D" parent="AttackHit"]
position = Vector2(25, 11)
shape = SubResource("CapsuleShape2D_kne1u")

[connection signal="body_entered" from="PlayerHit" to="." method="_on_player_hitbox_body_entered"]
[connection signal="body_exited" from="PlayerHit" to="." method="_on_player_hitbox_body_exited"]
[connection signal="body_entered" from="AttackHit" to="." method="_on_attack_hit_body_entered"]
